# centralized-kyc

./: db.sqlite3  manage.py  pyproject.toml
bank/: models.py  urls.py  views.py
bank/migrations/: 0001_initial.py
centralizedkyc/: asgi.py  settings.py  urls.py  wsgi.py
user/: admin.py  models.py  serializers.py  urls.py  views.py
user/migrations/: 0001_initial.py  0002_alter_authuser_managers.py  0002_alter_verifieduser_middle.py  0002_verifieduser_signautre.py  0003_alter_authuser_managers.py  0003_alter_verifieduser_signautre.py  0004_alter_verifieduser_nid_number.py  0005_verifieduser_verified.py  0006_rename_signautre_verifieduser_signature.py  0007_alter_verifieduser_citizenship_back_and_more.py
user/templates/user/: get_email_view.html
